# hota

./: CMakeLists.txt  Makefile  Toolchain.cmake
src/: animation.c  cd_iso.c  game2bin.c  main.c  main.h  music.c  render.c  screen.c  sound.c  vm.c
